--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
           <i class="fas fa-bars toggle"></i>
           <i class="fas fa-times toggle"></i>
         </div>
-        <nav class="d-flex align-items-center justify-content-center">
+        <nav
+          class="d-flex align-items-center justify-content-center justify-content-lg-between"
+        >
           <a class="navbar-brand" href="index.html">
             <img class="img-fluid" src="/images/logo.png" alt="" />
           </a>
@@ -59,6 +61,37 @@
         </div>
       </div>
     </header>
+    <main>
+      <!-- ABOUT SECTION -->
+      <section class="about" id="about">
+        <div class="container">
+          <div class="row align-items-lg-center">
+            <!-- Column One -->
+            <div class="col-12 col-md-6 text-center text-md-left">
+              <div class="section-heading mb-3">
+                <h4>Discover</h4>
+                <h1 class="display-4">Our Story</h1>
+              </div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+                natus molestiae iure earum temporibus possimus impedit illo. Ea,
+                quis, laborum cumque commodi soluta impedit inventore quae
+                aspernatur facere recusandae dolorum cum. Adipisci reprehenderit
+                quaerat architecto quia similique corrupti hic maxime
+                perferendis ipsum pariatur dolorem magni optio ea, nihil nam
+                perspiciatis!
+              </p>
+              <a class="btn mt-4 mb-5 mb-md-0" href="#">Find out more</a>
+            </div>
+            <!-- Column Two -->
+            <div class="col-12 col-md-6">
+              <img class="img-fluid" src="/images/about-img.jpg" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
     <!-- BOOTSTRAP SCRIPTS-->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
