--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       crossorigin="anonymous"
     />
 
+    <!-- AOS LINK -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="css/main.css" />
 
@@ -67,7 +70,10 @@
         <div class="container">
           <div class="row align-items-lg-center">
             <!-- Column One -->
-            <div class="col-12 col-md-6 text-center text-md-left">
+            <div
+              class="col-12 col-md-6 text-center text-md-left"
+              data-aos="fade-right"
+            >
               <div class="section-heading mb-3">
                 <h4>Discover</h4>
                 <h1 class="display-4">Our Story</h1>
@@ -84,12 +90,191 @@
               <a class="btn mt-4 mb-5 mb-md-0" href="#">Find out more</a>
             </div>
             <!-- Column Two -->
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6" data-aos="fade-left">
               <img class="img-fluid" src="/images/about-img.jpg" alt="" />
             </div>
           </div>
         </div>
       </section>
+
+      <!-- MENU SECTION -->
+      <section class="menu" id="menu">
+        <div class="container">
+          <div class="row text-center text-white">
+            <div class="col-12 col-md-4 mb-4 mb-md-0" data-aos="fade-up">
+              <div class="shop-info">
+                <i class="far fa-clock mb-3"></i>
+                <h1 class="mb-4">Hours of Operation</h1>
+                <p>Mon - Fri: 8:00am - 6:00pm</p>
+                <p>Sat - Sun: 8:00am - 1:00pm</p>
+              </div>
+            </div>
+            <div class="col-12 col-md-4 mb-4 mb-md-0" data-aos="fade-down">
+              <div class="shop-info">
+                <i class="fas fa-map-marked-alt mb-3"></i>
+                <h1 class="mb-4">Our Location</h1>
+                <address>
+                  1234 Main Street <br />
+                  New York City, NY 12345
+                </address>
+              </div>
+            </div>
+            <div class="col-12 col-md-4 mb-4 mb-md-0" data-aos="fade-right">
+              <div class="shop-info">
+                <i class="fas fa-mobile-alt mb-3"></i>
+                <h1 class="mb-4">Get in Touch</h1>
+                <p>Phone: (800) 555-5555</p>
+                <p>Email: contact@bakery.com</p>
+              </div>
+            </div>
+          </div>
+          <hr class="mt-5" />
+        </div>
+
+        <div class="container-fluid p-0">
+          <div class="section-heading my-5 text-center">
+            <h4 class="text-white">Our Tasty Treats</h4>
+            <h1 class="display-4">The Menu</h1>
+          </div>
+
+          <!-- ROW #1 -->
+          <div class="row no-gutters">
+            <!-- Column set #1 -->
+            <div class="col-12 col-sm-6 col-xl-2 order-sm-1 order-xl-1">
+              <img class="img-fluid" src="/images/menu-item-1.jpg" alt="" />
+            </div>
+            <div
+              class="col-12 col-sm-6 col-xl-2 order-sm-2 order-xl-2 point-left"
+            >
+              <div class="menu-item-desc">
+                <h6>$10</h6>
+                <h1>The Cake</h1>
+                <p>This cake is amazing! I recommend it to everyone.</p>
+                <a class="btn mt-3 d-none d-xl-block" href="#">Learn More</a>
+              </div>
+            </div>
+
+            <!-- Column set #2 -->
+            <div class="col-12 col-sm-6 col-xl-2 order-sm-4 order-xl-3">
+              <img class="img-fluid" src="/images/menu-item-2.jpg" alt="" />
+            </div>
+            <div
+              class="col-12 col-sm-6 col-xl-2 order-sm-3 order-xl-4 point-left"
+            >
+              <div class="menu-item-desc">
+                <h6>$10</h6>
+                <h1>The Cake</h1>
+                <p>This cake is amazing! I recommend it to everyone.</p>
+                <a class="btn mt-3 d-none d-xl-block" href="#">Learn More</a>
+              </div>
+            </div>
+
+            <!-- Column set #3 -->
+            <div class="col-12 col-sm-6 col-xl-2 order-sm-5 order-xl-5">
+              <img class="img-fluid" src="/images/menu-item-3.jpg" alt="" />
+            </div>
+            <div
+              class="col-12 col-sm-6 col-xl-2 order-sm-6 order-xl-6 point-left"
+            >
+              <div class="menu-item-desc">
+                <h6>$10</h6>
+                <h1>The Cake</h1>
+                <p>This cake is amazing! I recommend it to everyone.</p>
+                <a class="btn mt-3 d-none d-xl-block" href="#">Learn More</a>
+              </div>
+            </div>
+          </div>
+
+          <!-- ROW #2 -->
+          <div class="row no-gutters">
+            <!-- Column set #4 -->
+            <div class="col-12 col-sm-6 col-xl-2 order-sm-2 order-xl-2">
+              <img class="img-fluid" src="/images/menu-item-4.jpg" alt="" />
+            </div>
+            <div
+              class="col-12 col-sm-6 col-xl-2 order-sm-1 order-xl-1 point-right"
+            >
+              <div class="menu-item-desc">
+                <h6>$10</h6>
+                <h1>The Cake</h1>
+                <p>This cake is amazing! I recommend it to everyone.</p>
+                <a class="btn mt-3 d-none d-xl-block" href="#">Learn More</a>
+              </div>
+            </div>
+
+            <!-- Column set #5 -->
+            <div class="col-12 col-sm-6 col-xl-2 order-sm-3 order-xl-4">
+              <img class="img-fluid" src="/images/menu-item-5.jpg" alt="" />
+            </div>
+            <div
+              class="col-12 col-sm-6 col-xl-2 order-sm-5 order-xl-3 point-right"
+            >
+              <div class="menu-item-desc">
+                <h6>$10</h6>
+                <h1>The Cake</h1>
+                <p>This cake is amazing! I recommend it to everyone.</p>
+                <a class="btn mt-3 d-none d-xl-block" href="#">Learn More</a>
+              </div>
+            </div>
+
+            <!-- Column set #6 -->
+            <div class="col-12 col-sm-6 col-xl-2 order-sm-6 order-xl-6">
+              <img class="img-fluid" src="/images/menu-item-6.jpg" alt="" />
+            </div>
+            <div
+              class="col-12 col-sm-6 col-xl-2 order-sm-5 order-xl-5 point-right"
+            >
+              <div class="menu-item-desc">
+                <h6>$10</h6>
+                <h1>The Cake</h1>
+                <p>This cake is amazing! I recommend it to everyone.</p>
+                <a class="btn mt-3 d-none d-xl-block" href="#">Learn More</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- CHEF SECTION -->
+      <section class="chef" id="chef">
+        <div class="container">
+          <div class="section-heading my-5 text-center">
+            <h4>Meet</h4>
+            <h1 class="display-4">Our Chefs</h1>
+          </div>
+
+          <div class="row text-center">
+            <div class="col-12 col-md-4" data-aos="fade-right">
+              <img class="img-fluid" src="/images/chef-1.png" alt="" />
+              <div class="card-body">
+                <h1>Natasha Romanov</h1>
+                <h6>Cupcake Specialist</h6>
+                <p>Natasha is an awesome pastry chef!</p>
+              </div>
+            </div>
+            <div class="col-12 col-md-4" data-aos="fade-up">
+              <img class="img-fluid" src="/images/chef-2.png" alt="" />
+              <div class="card-body">
+                <h1>Susan Storm</h1>
+                <h6>Cake Decorator</h6>
+                <p>Susan has an eye for elegant design!</p>
+              </div>
+            </div>
+            <div class="col-12 col-md-4" data-aos="fade-left">
+              <img class="img-fluid" src="/images/chef-3.png" alt="" />
+              <div class="card-body">
+                <h1>Sam Smith</h1>
+                <h6>Master Baker</h6>
+                <p>Sam is an awesome baker!</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <footer class="text-center py-5">
+        &copy; Bakery 2019
+      </footer>
     </main>
 
     <!-- BOOTSTRAP SCRIPTS-->
@@ -117,9 +302,11 @@
     ></script>
 
     <!-- ANIMATION ON SCROLL -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
     <!-- CUSTOM JAVASCRIPTS-->
     <script src="js/main.js"></script>
+
+    <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
   </body>
 </html>
