Changed baker title

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
               <img class="img-fluid" src="/images/chef-2.png" alt="" />
               <div class="card-body">
                 <h1>Susan Storm</h1>
-                <h6>Cake Decorator</h6>
+                <h6>Cake Decorator Specialist</h6>
                 <p>Susan has an eye for elegant design!</p>
               </div>
             </div>
